tdf#115233 Don't reset crop when replacing a graphic

When passing DND_ACTION_MOVE to View::InsertGraphic, the whole object gets
replaced. DND_ACTION_LINK should be used, because it just replaces the
graphic and keeps crop information.
Marking the object is not needed, because InsertObjectAtView and
ReplaceObjectAtView already take care of that.

Change-Id: I0d829ec39a9d484a7c8946252e90eddb12ea9756
Reviewed-on: https://gerrit.libreoffice.org/56401
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
(cherry picked from commit 3f3c16e433f727bf52a6f894956b489187ab6dce)